# TradingSimulator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  simulator.cpp
docs/: architecture.md
src/: simulator.cpp
src/exchange/: exchange.cpp  exchange.h
src/models/: order.h  trade.h
src/orderbook/: orderbook.cpp  orderbook.h
tests/: test_orderbook.cpp
